# bachelor-thesis

./: .gitignore  Cargo.toml  README.md  flake.nix  questions-about-scope.md  shell.nix
bambu-comparison/: .gitignore  (+5 more)
bambu-macro/bambu_build_demo/: Cargo.toml  build.sh  default.nix  llvm-ir-target.json  test-md5.xml
bambu-macro/bambu_build_demo/src/: md5.rs
bambu-macro/bambu_build_demo/src/md5/: padding.rs
bambu-macro/bambu_build_demo/subcrate/src/: lib.rs
bambu-macro/extract_rust_hdl_interface/: Cargo.toml  README
bambu-macro/extract_rust_hdl_interface/src/: extract_rust_hdl_interface.rs  lib.rs
bambu-macro/extract_rust_hdl_interface/src/extract_rust_hdl_interface/: convert_port_to_signal.rs  generate_verilog_body.rs
bambu-macro/rust_hls_example/: .gitignore  Cargo.toml  README  Readme.adoc  build.rs
bambu-macro/rust_hls_example/rust_hls/verilog/: hls_module_synthesized.v  your_module_synthesized.v
bambu-macro/rust_hls_example/rust_hls/your_module_synthesized/: your_function.ll  your_function.v
bambu-macro/rust_hls_example/src/: hls_module_synthesized.rs  main.rs  your_module_synthesized.rs
bambu-macro/rust_hls_lib/: Cargo.toml  README
bambu-macro/rust_hls_lib/src/: build.rs  buildscript_hls.rs  cache_workspace.rs  caching.rs  calculate_hash.rs  darling_error_outside_macro.rs  extract_function_crate.rs  generate_hls_script.rs  generated_file.rs  lib.rs  main.rs  rust_hls.rs  rust_hls_old.rs  rust_hls_options.rs
bambu-macro/rust_hls_lib/src/buildscript_hls/: find_modules.rs  generate_verilator_shim.rs  perform_hls.rs  process_module.rs  process_modules.rs
bambu-macro/rust_hls_lib/src/caching/: calculate_hash.rs  generate_cached_path.rs
bambu-macro/rust_hls_lib/src/extract_function_crate/: copy_crate.rs  modify_sources.rs  sanitize_cargo_toml.rs
bambu-macro/rust_hls_lib/src/generated_file/: filename_to_module_path.rs  generate_rust_hdl_struct.rs  generate_verilator_rust_hdl_struct.rs  generate_verilog_file.rs
bambu-macro/rust_hls_lib/test_suites/crate_with_path_dependency/: Cargo.toml
bambu-macro/rust_hls_lib/test_suites/extract_function_test/: Readme.adoc
bambu-macro/rust_hls_macro/: Cargo.toml  README
bambu-macro/rust_hls_macro/src/: dummy_macro.rs  hls_macro.rs  lib.rs  locate_file.rs
bambu-macro/rust_hls_macro/src/hls_macro/: locate_file.rs
bambu-macro/rust_hls_macro/tests/: creates_rust_hdl_struct.rs  example.rs  fails_on_hls_function_without_module.rs  fails_on_missing_hls_function.rs  fails_on_missing_hls_function.stderr  fails_on_multiple_hls_function.rs  fails_on_multiple_hls_function.stderr  fails_on_nested_module.rs  fails_on_nested_module.stderr  fails_on_unknown_arguments.rs  fails_on_unknown_arguments.stderr  hls_attribute_is_invalid_on_enum.rs  hls_attribute_is_invalid_on_enum.stderr  progress.rs  simple_example.rs  supports_flag_arguments.rs  works_on_functions.rs  works_with_module_named_like_function.rs
bambu-macro/rust_hls_macro_lib/: Cargo.toml  README
bambu-macro/rust_hls_macro_lib/src/: generate_names.rs  hls_macro_helpers.rs  lib.rs  make_content_compile.rs  parse_arguments.rs  parse_content.rs  parse_module.rs
bambu-macro/rust_hls_macro_lib/src/parse_module/: check_nested_macros.rs  find_dependencies.rs  find_main_function.rs  remove_hls_macros.rs  super_checker.rs
bambu-macro/spanned_error_message/: Cargo.toml  README
bambu-macro/spanned_error_message/src/: lib.rs  point_at_file.rs  point_at_single_line.rs  section.rs  title.rs
bambu-macro/test-crate/: .gitignore  Cargo.toml  testbench.cpp
bambu-macro/test-crate/src/: hls_adder.rs  main.rs  nohls.rs  synth_itoa.rs
bambu-macro/wrap_verilog_in_rust_hdl_macro/: Cargo.toml  README
bambu-macro/wrap_verilog_in_rust_hdl_macro/src/: lib.rs
bambu-macro/wrap_verilog_in_rust_hdl_macro/tests/: generates_struct.rs  parse_verilog.rs  progress.rs  struct_has_correct_signals.rs
rust-hls-keccak/: Cargo.toml  build.rs  trace_working.vcd
rust-hls-keccak/rust_hls/verilog/keccak/: keccak_hls_synthesized.v
rust-hls-keccak/src/: keccak.rs
rust-hls-keccak/src/keccak/: keccak_hls_synthesized.rs
rust-hls-md5/: .gitignore  Cargo.toml  Readme.adoc
rust-hls-md5/rust_hls/verilog/md5/: md5_hls_synthesized.v
rust-hls-md5/rust_hls/verilog/md5_size/: md5_hls_synthesized.v
rust-hls-md5/rust_hls/verilog/md5_speed/: md5_hls_synthesized.v
rust-hls-md5/src/: encode_input.rs  lib.rs  md5.rs  md5_size.rs  md5_speed.rs  padding.rs
rust-hls-md5/src/md5/: encode_input.rs  encode_result.rs  md5_hls_synthesized.rs
rust-hls-md5/src/md5_size/: md5_hls_synthesized.rs
rust-hls-md5/src/md5_speed/: md5_hls_synthesized.rs
rust-hls-minmax/: Cargo.toml  build.rs
rust-hls-minmax/rust_hls/verilog/minmax/: min_max_hls_synthesized.v
rust-hls-minmax/rust_hls/verilog/minmax_size/: min_max_hls_synthesized.v
rust-hls-minmax/rust_hls/verilog/minmax_speed/: min_max_hls_synthesized.v
rust-hls-minmax/src/: lib.rs  memory.rs  minmax.rs  minmax_size.rs  minmax_speed.rs
rust-hls-minmax/src/minmax/: min_max_hls_synthesized.rs
rust-hls-minmax/src/minmax_size/: min_max_hls_synthesized.rs
rust-hls-minmax/src/minmax_speed/: min_max_hls_synthesized.rs
rust-keccak-wrapper/: .gitignore  Cargo.toml  Makefile  Readme.adoc  a.out  panic.ll  test.xml
rust-keccak-wrapper/src/: keccak.rs
thesis/experiments/rust-hls-experiments/: .gitignore  Cargo.toml  Makefile
thesis/experiments/rust-hls-experiments/keccak_crates_size/: Cargo.toml
thesis/experiments/rust-hls-experiments/keccak_crates_speed/: Cargo.toml  keccak_crates_speed.vcd
thesis/experiments/rust-hls-experiments/keccak_idiom_size/: Cargo.toml
thesis/experiments/rust-hls-experiments/keccak_idiom_speed/: .gitignore  Cargo.toml
thesis/experiments/rust-hls-experiments/keccak_rust_size/: Cargo.toml  keccak_rust_size.vcd
thesis/experiments/rust-hls-experiments/keccak_rust_speed/: Cargo.toml  trace_abc.vcd
thesis/experiments/rust-hls-experiments/md5_rust_size/: Cargo.toml
thesis/experiments/rust-hls-experiments/md5_rust_speed/: Cargo.toml
thesis/experiments/rust-hls-experiments/minmax_idiom_size/: Cargo.toml
(+412 files in other folders)
