[workspace]
members = [
    "thesis/rusthdl-blinker",
    "toolchain-test",
    "rusthdl-intro",
    "thesis/rusthdl-blinker",
    "thesis/experiments/rust-hls-experiments/rust-hls-test-helpers",
    "thesis/experiments/rust-hls-experiments/keccak_rust_size",
    "thesis/experiments/rust-hls-experiments/keccak_rust_speed",
    "thesis/experiments/rust-hls-experiments/minmax_rust_size",
    "thesis/experiments/rust-hls-experiments/minmax_idiom_size",
    "thesis/experiments/rust-hls-experiments/minmax_idiom_speed",
    "thesis/experiments/rust-hls-experiments/minmax_rust_speed",
    "thesis/experiments/rust-hls-experiments/md5_rust_size",
    "thesis/experiments/rust-hls-experiments/md5_rust_speed",
    "rust-md5",
    "rust-keccak-wrapper",
    "rust-keccak",
    "rust-minmax",
    "bambu-macro/rust_hls",
    "rust-hls-minmax",
    "rust-hls-keccak",
    "rust-hls-md5",
    "bambu-macro/rust_hls_macro",
    "bambu-macro/rust_hls_macro_lib",
    "bambu-macro/spanned_error_message",
    "bambu-macro/rust_hls_example",
    "bambu-macro/extract_rust_hdl_interface",
    "bambu-macro/bambu_build_demo",
    "bambu-macro/bambu_build_demo/subcrate",
    "bambu-macro/wrap_verilog_in_rust_hdl_macro",
]
exclude = ["bambu-macro/*/test_suites/*", "*/target/*"]
