[package]
name = "rust_hls_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
cargo_toml = "0.15.2"
derive_builder = "0.12.0"
directories = "5.0.0"
fs_extra = "1.3.0"
merkle_hash = "3.5.0"
rand = "0.8.5"
tempfile = "3.5.0"
thiserror = "1.0.40"
