[package]
name = "rust_hls_lib"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["verilog", "fpga", "hls", "high-level-synthesis", "bambu"]
authors = ["zebreus <lennarteichhorn@googlemail.com>"]
categories = ["development-tools::build-utils", "compilers"]
repository = "https://github.com/zebreus/bachelor-thesis"
homepage = "https://github.com/zebreus/bachelor-thesis/tree/master/bambu-macro/rust_hls_lib"
description = "Support crate for rust_hls"

[dependencies]
base64 = "0.21.0"
cargo_toml = "0.15.2"
derive_builder = "0.12.0"
directories = "5.0.0"
fs_extra = "1.3.0"
fslock = "0.2.1"
itertools = "0.10.5"
merkle_hash = "3.5.0"
rand = "0.8.5"
serde = "1.0.160"
tempfile = "3.5.0"
thiserror = "1.0.40"
toml = "0.7.3"
proc-macro2 = { version = "1.0.60" }
syn = { version = "2.0.18", features = [
    "full",
    "parsing",
    "extra-traits",
    "printing",
    "clone-impls",
    "derive",
    "visit",
    "visit-mut",
    "fold",
], default-features = false }
prettyplease = { version = "0.2.6", default-features = false }
quote = { version = "1.0.28", default-features = false }
glob = "0.3.1"
