[package]
name = "rust_hls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["rust-hdl", "verilog", "fpga", "hls", "high-level-synthesis"]
authors = ["zebreus <lennarteichhorn@googlemail.com>"]
categories = ["development-tools::build-utils", "compilers"]
repository = "https://github.com/zebreus/bachelor-thesis"
homepage = "https://github.com/zebreus/bachelor-thesis/tree/master/bambu-macro/rust_hls_macro"
description = "High level synthesis support for rust-hdl"
autotests = false

[lib]
proc-macro = true
rustflags = ["--cfg", "procmacro2_semver_exempt", "--cfg", "super_unstable"]

[build]
rustflags = ["--cfg", "procmacro2_semver_exempt", "--cfg", "super_unstable"]

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
itertools = "0.10.5"
proc-macro2 = {version = "1.0.56", features = ["span-locations"] }
quote = "1.0.26"
rust-hdl = "0.45.1"
rust_hls_lib = {path = "../rust_hls_lib"}
syn = { version = "2.0.15", features = ["full"] }
thiserror = "1.0.40"

[dev-dependencies]
trybuild = { version = "1.0.80", features = ["diff"] }
