[package]
name = "rust_hls"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["rust-hdl", "verilog", "fpga", "hls", "high-level-synthesis"]
authors = ["zebreus <lennarteichhorn@googlemail.com>"]
categories = ["development-tools::build-utils", "compilers"]
repository = "https://github.com/zebreus/bachelor-thesis"
homepage = "https://github.com/zebreus/bachelor-thesis/tree/master/bambu-macro/rust_hls_macro"
description = "High level synthesis support for rust-hdl"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[features]
default = ["perform-hls"]
perform-hls = ["dep:itertools", "dep:proc-macro2", "dep:quote", "dep:rust-hdl", "dep:rust_hls_lib", "dep:syn", "dep:thiserror", "dep:wrap_verilog_in_rust_hdl_macro"]

[dependencies]
itertools =  {version = "0.10.5", optional = true}
proc-macro2 = {version = "1.0.56", features = ["span-locations"], optional = true }
quote =  {version = "1.0.26", optional = true}
rust-hdl =  {version = "0.45.1", optional = true}
rust_hls_lib = {path = "../rust_hls_lib", optional = true}
syn = { version = "2.0.15", features = ["full"], optional = true}
tempfile = "3.5.0"
thiserror =  {version = "1.0.40", optional = true}
wrap_verilog_in_rust_hdl_macro = { version = "0.1.0", optional = true }

[dev-dependencies]
trybuild = { version = "1.0.80", features = ["diff"] }
