[package]
name = "rust_hls_macro_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["rust_hls"]
authors = ["zebreus <lennarteichhorn@googlemail.com>"]
categories = []
repository = "https://github.com/zebreus/bachelor-thesis"
homepage = "https://github.com/zebreus/bachelor-thesis/tree/master/bambu-macro/rust_hls_macro_lib"
description = "Helper functions for rust_hls and rust_hls_macro"

[dependencies]
thiserror = "1.0.40"
proc-macro2 = { version = "1.0.60" }
syn = { version = "2.0.18", features = [
    "full",
    "parsing",
    "extra-traits",
    "printing",
    "clone-impls",
    "derive",
    "visit",
    "visit-mut",
    "fold",
], default-features = false }
quote = { version = "1.0.28", default-features = false }
darling = "0.20.1"
prettyplease = "0.2.7"
convert_case = "0.6.0"
