[package]
name = "test-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
rust-hdl = "0.45.1"
rust_hls = {path = "../rust_hls_macro"}
wrap_verilog_in_rust_hdl_macro = "0.1.0"
